# POS-NEXUS

./: .env.example  .gitignore  DEPLOYMENT_SUPABASE.md  Dockerfile  ENTREGABLES_FINALES.md  Makefile  QUICKSTART.md  QUICKSTART_TESTING.md  README.md  create_test_user.py  docker-compose.yml  migrate_to_supabase.ps1  productos_export.csv  pyproject.toml  requirements.txt  run_all_tests.bat  run_all_tests.ps1  run_all_tests.sh  test_output.txt  test_output2.txt  verificar_supabase.py
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 849d2968c4fe_add_rubro_field_to_tienda.py
app/: __init__.py  main.py  models.py  schemas.py
app/api/: deps.py
app/api/routes/: auth.py  dashboard.py  exportar.py  health.py  insights.py  inventario.py  payments.py  productos.py  reportes.py  ventas.py
app/core/: cache.py  config.py  db.py  exceptions.py  logging_config.py  middleware.py  performance.py  rate_limit.py  security.py  validators.py  validators_advanced.py
app/schemas_models/: __init__.py  productos.py  ventas.py
app/services/: afip_service.py  insight_service.py  payment_service.py
docs/: BACKGROUND_TASKS_GUIDE.md  DEPLOYMENT.md  TESTING.md  TEST_SUMMARY.md
